--- a/index.html
+++ b/index.html
@@ -365,6 +365,11 @@
                 <h4>Instagram</h4>
                 <p>just_un.worthy</p>
               </div>
+	      <div class="Phone">
+		      <i class="icofont-phone"></i>
+		      <h4>Phone:</h4>
+		      <p>+91-7981086896</p>
+	      </div>
 
 
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61205.048109429335!2d80.60986486280238!3d16.510161884039395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a35eff9482d944b%3A0x939b7e84ab4a0265!2sEluru%2C%20Andhra%20Pradesh%2C%20India!5e0!3m2!1sen!2sbg!4v1594337345470!5m2!1sen!2sbg" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
