--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <div class="social-links mt-3 text-center">
           <a href="https://www.instagram.com/just_un.worthy/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://github.com/amar-1999" target="_blank"class="Github"><i class='bx bxl-github'></i></a>
+          <a href="https://gitlab.com/amar_d" target="_blank"class="Gitlab"><i class='bx bxl-gitlab'></i></a>
           <a href="https://www.linkedin.com/in/damarakeswarguddanti/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
