--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Amar</h1>
-      <p>I'm a <span class="typed" data-typed-items="Developer, Poet , Writer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Developer, Poet , Writer, Artist"></span></p>
     </div>
   </section><!-- End Hero -->
 
