--- a/index.html
+++ b/index.html
@@ -275,19 +275,17 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <a href="https://github.com/amar-1999/music-player"><img class="d-block w-100 align-items-center" src="assets/img/projects/layilo1.png" alt="First slide"></a>
+            <a href="https://github.com/amar-1999/music-player"><img class="d-block w-100 align-items-center" src="assets/img/projects/simplemusicplayer.png" alt="First slide"></a>
           </div>
-          <div class="carousel-item">
-            <a href="https://github.com/amar-1999/Credit-Card-Payment-App"> <img class="d-block w-100" src="assets/img/projects/e-learning.png" alt="Second slide"></a>
-           </div>
+          
            <div class="carousel-item">
-            <a href="https://github.com/amar-1999/Zoom-clone-app"><img class="d-block w-100" src="assets/img/projects/counselling.jpeg" alt="Third slide"></a> 
+            <a href="https://github.com/amar-1999/video-calling-app"><img class="d-block w-100" src="assets/img/projects/videocallingapp.png" alt="Second slide"></a> 
            </div>
           <div class="carousel-item">
-           <a href="https://github.com/amar-1999/Upload-an-image-file-to-a-folder-in-the-server"> <img class="d-block w-100" src="assets/img/projects/WhatsApp Image 2020-10-09 at 8.24.10 AM.jpeg" alt="Fourth slide"></a>
+           <a href="https://github.com/amar-1999/Upload-an-image-file-to-a-folder-in-the-server"> <img class="d-block w-100" src="assets/img/projects/imageuploader.png" alt="Third slide"></a>
           </div>
            <div class="carousel-item">
-            <a href="https://github.com/amar-1999/Simple-Paint-App"><img class="d-block w-100" src="assets/img/projects/team2.png" alt="Fifth slide"></a>
+            <a href="https://github.com/amar-1999/Simple-Paint-App"><img class="d-block w-100" src="assets/img/projects/simplepaintapp.png" alt="Fourth slide"></a>
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
