--- a/index.html
+++ b/index.html
@@ -152,7 +152,19 @@
             </div>
           </div>
 
+		<div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
+            <div class="count-box">
+            <i class="icofont-travel"></i>
+                          <p><strong>Travelling</strong></p>
+            </div>
+          </div>
 
+		<div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
+            <div class="count-box">
+            <i class="icofont-movies"></i>
+                          <p><strong>Movies</strong></p>
+            </div>
+          </div>
 
         </div>
 
