--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
 
 		<div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
-            <i class="icofont-travel"></i>
+            <i class="icofont-travelling"></i>
                           <p><strong>Travelling</strong></p>
             </div>
           </div>
 
 		<div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
-            <i class="icofont-movies"></i>
+            <i class="icofont-ui-movie"></i>
                           <p><strong>Movies</strong></p>
             </div>
           </div>
