--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <img src="assets/img/navbarprofile.jpeg"alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Damarakeswar<br>Guddanti</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.instagram.com/just_un.worthy/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://instagram.com/the_unworthy.poet?igshid=1f81p4yh7rv5g" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://twitter.com/Amar78752267" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://github.com/amar-1999" target="_blank"class="Github"><i class='bx bxl-github'></i></a>
           <a href="https://gitlab.com/amar_d" target="_blank"class="Gitlab"><i class='bx bxl-gitlab'></i></a>
@@ -376,7 +376,7 @@
                 <p>damarakeswarg1999@gmail.com</p>
               </div>
               <div class="address">
-              <a href="https://www.instagram.com/just_un.worthy/" target="_blank"><i class="icofont-instagram"></i></a>
+              <a href="https://instagram.com/the_unworthy.poet?igshid=1f81p4yh7rv5g" target="_blank"><i class="icofont-instagram"></i></a>
                 <h4>Instagram</h4>
                 <p>just_un.worthy</p>
               </div>
