--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
            <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="80">
             <div class="count-box">
             <i class="icofont-photobucket"></i>
-                          <a href="https://instagram.com/the_unworthy.poet?igshid=1f81p4yh7rv5g"><strong>Poetry</strong></a>
+                           <p><a href="https://instagram.com/the_unworthy.poet?igshid=1f81p4yh7rv5g"><strong>Poetry</strong></a></p>
             </div>
           </div>
           
