--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
               <div class="address">
               <a href="https://instagram.com/the_unworthy.poet?igshid=1f81p4yh7rv5g" target="_blank"><i class="icofont-instagram"></i></a>
                 <h4>Instagram</h4>
-                <p>just_un.worthy</p>
+                <p>the_unworhty.poet</p>
               </div>
 	      <div class="Phone">
 		      <i class="icofont-phone"></i>
