--- a/index.html
+++ b/index.html
@@ -374,6 +374,7 @@
                 <a><i class="icofont-envelope"></i></a>
                 <h4>Email:</h4>
                 <p>damarakeswarg1999@gmail.com</p>
+		      <a href="mailto:damarakeswarg1999@gmail.com" class="btn contact-details"></a>
               </div>
               <div class="address">
               <a href="https://instagram.com/the_unworthy.poet?igshid=1f81p4yh7rv5g" target="_blank"><i class="icofont-instagram"></i></a>
@@ -381,9 +382,11 @@
                 <p>the_unworthy.poet</p>
               </div>
 	      <div class="Phone">
+		      <a href="tel:7981086896" class="btn contact-details">
 		      <i class="icofont-phone"></i>
-		      <h4>Phone:</h4>
-		      <p>+91-7981086896</p>
+		      <h4>Phone</h4>
+		      </a>	      
+		      
 	      </div>
 
 
