--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hey! My name is <b>Damarakeswar</b> but my friends call me <b>Amar</b>. I'm a web-developer with a passion for full stack development and design. I'm currently a <b>Jr. Software Developer</b> at <a href="https://eruvaka.com/">Eruvaka Technologies</a>. I aspire towards a career that will allow me to channel my creativity through crafting beautiful software and engaging experiences.</div></p>
+          <p>Hey! My name is <b>Damarakeswar</b> but my friends call me <b>Amar</b>. I'm a web-developer with a passion for full stack development and design. I'm currently a <b>Jr. Software Developer</b> at <a href="https://eruvaka.com/" style = "a:link {color: black;} a:hover{ color: #97CB66;}">Eruvaka Technologies</a>. I aspire towards a career that will allow me to channel my creativity through crafting beautiful software and engaging experiences.</div></p>
 	    
 
         <div class="row">
