--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	    <h3>Writer</h3>
             <p class="font-italic">
             <div >
-             Being an introvert,I try to show all my creativity through poems and writings.For more info you can visit my poetry page <a href="https://instagram.com/the_unworthy.poet?igshid=1f81p4yh7rv5g"> Click here </a>
+             Being an introvert,I try to show all my creativity through poems and writings.For more info you can visit my poetry page <a href="https://instagram.com/d_amar_21?igshid=jvxaxjwwdj9t"> Click here </a>
               </div>
             </p>
 	
