--- a/index.html
+++ b/index.html
@@ -339,9 +339,15 @@
               <p><em>National Institute of Technology, Tadepalligudem, Andhra Pradesh</em></p>
             </div>
              </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-             
-              </div>
+             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+              <h3 class="resume-title">Professional Experience</h3>
+              <div class="resume-item">
+                <h4>Back-End Developer</h4>
+              <h5>2021,February - Present</h5>
+               <p><em><a href="https://eruvaka.com/" target="_blank">Eruvaka Technologies</a> </em></p>
+              <ul>
+             <!--   <li>Include your works here</li>-->
+             </ul>
     </div>
         </div>
 
