--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <img src="assets/img/navbarprofile.jpeg"alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Damarakeswar<br>Guddanti</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://instagram.com/d_amar_21?igshid=jvxaxjwwdj9t" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.instagram.com/d_amar_22/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://twitter.com/Amar78752267" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://github.com/amar-1999" target="_blank"class="Github"><i class='bx bxl-github'></i></a>
           <a href="https://gitlab.com/amar_d" target="_blank"class="Gitlab"><i class='bx bxl-gitlab'></i></a>
@@ -96,7 +96,7 @@
 	    <h3>Writer</h3>
             <p class="font-italic">
             <div >
-             Being an introvert,I try to show all my creativity through poems and writings.For more info you can visit my poetry page <a href="https://instagram.com/d_amar_21?igshid=jvxaxjwwdj9t"> Click here </a>
+             Being an introvert,I try to show all my creativity through poems and writings.For more info you can visit my poetry page <a href="https://www.instagram.com/d_amar_22/"> Click here </a>
               </div>
             </p>
 	
@@ -379,9 +379,9 @@
 		      <a href="mailto:damarakeswarg1999@gmail.com" class="btn contact-details"></a>
               </div>
               <div class="address">
-              <a href= "https://instagram.com/d_amar_21?igshid=jvxaxjwwdj9t" target="_blank"><i class="icofont-instagram"></i></a>
+              <a href= "https://www.instagram.com/d_amar_22/" target="_blank"><i class="icofont-instagram"></i></a>
                 <h4>Instagram</h4>
-                <p>the_unworthy.poet</p>
+                <p>d_amar_22</p>
               </div>
 	      <div class="Phone">
 		      <a href="tel:7981086896" class="btn contact-details">
