--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <img src="assets/img/navbarprofile.jpeg"alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Damarakeswar<br>Guddanti</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.instagram.com/d_amar_22/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.instagram.com/rama._.d.22/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://twitter.com/Amar78752267" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://github.com/amar-1999" target="_blank"class="Github"><i class='bx bxl-github'></i></a>
           <a href="https://gitlab.com/amar_d" target="_blank"class="Gitlab"><i class='bx bxl-gitlab'></i></a>
@@ -379,7 +379,7 @@
 		      <a href="mailto:damarakeswarg1999@gmail.com" class="btn contact-details"></a>
               </div>
               <div class="address">
-              <a href= "https://www.instagram.com/d_amar_22/" target="_blank"><i class="icofont-instagram"></i></a>
+              <a href= "https://www.instagram.com/rama._.d.22/" target="_blank"><i class="icofont-instagram"></i></a>
                 <h4>Instagram</h4>
                 <p>d_amar_22</p>
               </div>
