--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
               <div class="address">
               <a href= "https://www.instagram.com/rama._.d.22/" target="_blank"><i class="icofont-instagram"></i></a>
                 <h4>Instagram</h4>
-                <p>d_amar_22</p>
+                <p>amaR</p>
               </div>
 	      <div class="Phone">
 		      <a href="tel:7981086896" class="btn contact-details">
