Made changes in Writer Section

--- a/index.html
+++ b/index.html
@@ -91,15 +91,21 @@
 		<div >
               With a strong foundation in Front-End and Back-End, I'm passionate about web design and development, and interested in web and software development. 
               As I grow as a developer, I hope to write clean, readable code that can be used by others and leveraged to create beautiful software.
-      </div>
+    </div>
     </p>
+    <div class="row">
+    <div class="col-lg-4" data-aos="fade-right">
+      <img src="assets/img/image.jpg" class="img-fluid" alt="">
+    </div>
+    <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
 	    <h3>Writer</h3>
             <p class="font-italic">
             <div >
              Being an introvert,I try to show all my creativity through poems and writings.For more info you can visit my poetry page <a href="https://www.instagram.com/d_amar_22/"> Click here </a>
               </div>
             </p>
-	
+    </div>
+  </div>
 		</p>
           </div>
         </div>
