--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
  <!--Favicons-->
-  <link href="assets/img/navbarprofile.jpeg" rel="icon">
-  <link href="assets/img/navbarprofile.jpeg" rel="apple-touch-icon">
+  <link href="images/profile-1.png" rel="icon">
+  <link href="images/profile-1.png" rel="apple-touch-icon">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -37,7 +37,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/navbarprofile.jpeg"alt="" class="img-fluid rounded-circle">
+        <img src="images/profile-1.png"alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Damarakeswar<br>Guddanti</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.instagram.com/poet._.22/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
