Updated Fourth slide

--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          <!--
           <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+          <!--
           <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
           -->
         </ol>
@@ -307,6 +307,9 @@
           </div>
            <div class="carousel-item">
             <a href="https://github.com/amar-1999/Simple-Paint-App"><img class="d-block w-100" src="assets/img/simplepaintapp.png" alt="Third slide"></a>
+          </div>
+          <div class="carousel-item">
+            <a href="https://github.com/amar-1999/weather-app"><img class="d-block w-100" src="assets/img/weather-app.png" alt="Fourth slide"></a>
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
