--- a/index.html
+++ b/index.html
@@ -297,20 +297,19 @@
           <div class="carousel-item active">
             <a href="https://github.com/amar-1999/music-player"><img class="d-block w-100 align-items-center" src="assets/img/simplemusicplayer.png" alt="First slide"></a>
           </div>
-          <!--
+
            <div class="carousel-item">
-            <a href="https://github.com/amar-1999/video-calling-app"><img class="d-block w-100" src="assets/img/videocallingapp.png" alt="Second slide"></a> 
+            <a href="https://github.com/amar-1999/weather-app"><img class="d-block w-100" src="images/weather-app.png" alt="Second slide"></a> 
            </div>
-           -->
+          
           <div class="carousel-item">
-           <a href="https://github.com/amar-1999/Upload-an-image-file-to-a-folder-in-the-server"> <img class="d-block w-100" src="assets/img/imageuploader.png" alt="Second slide"></a>
+           <a href="https://github.com/amar-1999/Upload-an-image-file-to-a-folder-in-the-server"> <img class="d-block w-100" src="assets/img/imageuploader.png" alt="Third slide"></a>
           </div>
+
            <div class="carousel-item">
-            <a href="https://github.com/amar-1999/Simple-Paint-App"><img class="d-block w-100" src="assets/img/simplepaintapp.png" alt="Third slide"></a>
+            <a href="https://github.com/amar-1999/Simple-Paint-App"><img class="d-block w-100" src="assets/img/simplepaintapp.png" alt="Fourth slide"></a>
           </div>
-          <div class="carousel-item">
-            <a href="https://github.com/amar-1999/weather-app"><img class="d-block w-100" src="assets/img/weather-app.png" alt="Fourth slide"></a>
-          </div>
+        
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
