--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
           </div>
 
            <div class="carousel-item">
-            <a href="https://amar-1999.github.io/weatherapp.io/"><img class="d-block w-100" src="assets/img/weather-app.png" alt="Second slide"></a> 
+            <a href="https://github.com/amar-1999/weatherapp.io"><img class="d-block w-100" src="assets/img/weather-app.png" alt="Second slide"></a> 
            </div>
           
           <div class="carousel-item">
