--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <img src="images/profile-1.jpg"alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Damarakeswar<br>Guddanti</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.instagram.com/damar._.22/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://twitter.com/Amar78752267" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://www.instagram.com/poet._.22/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://twitter.com/Amar_Guddanti" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://github.com/amar-1999" target="_blank"class="Github"><i class='bx bxl-github'></i></a>
           <a href="https://gitlab.com/amar_d" target="_blank"class="Gitlab"><i class='bx bxl-gitlab'></i></a>
           <a href="https://www.linkedin.com/in/damarakeswarguddanti/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -101,7 +101,7 @@
 	    <h3>Writer</h3>
             <p class="font-italic">
             <div >
-             Being an introvert,I try to show all my creativity through poems and writings.For more info you can visit my poetry page <a href="https://www.instagram.com/damar._.22/" target="_blank" class="instagram"></href> Click here </a>
+             Being an introvert,I try to show all my creativity through poems and writings.For more info you can visit my poetry page <a href="https://www.instagram.com/poet._.22/" target="_blank" class="instagram"></href> Click here </a>
               </div>
             </p>
     </div>
@@ -337,7 +337,7 @@
               <h4>Damarakeswar Guddanti</h4>
               <p><em>Innovative and deadline-driven Web-Developer with experience in designing and developing</em></p>
               <ul style="list-style:none">
-                <li>Vijayawada, Andhra pradesh</li>
+                <li>Eluru, Andhra pradesh</li>
                 <li>damarakeswarg1999@gmail.com</li>
               </ul>
             </div>
@@ -353,11 +353,19 @@
               <h3 class="resume-title">Professional Experience</h3>
               <div class="resume-item">
                 <h4>Back-End Developer</h4>
-              <h5>2021,February - Present</h5>
-               <p><em><a href="https://eruvaka.com/" target="_blank">Eruvaka Technologies</a> </em></p>
+              <h5>2021, February - 2021, August</h5>
+               <p><em><a href="https://eruvaka.com/" target="_blank">Eruvaka Technologies Pvt Ltd.</a> </em></p>
               <ul>
              <!--   <li>Include your works here</li>-->
              </ul>
+    </div>
+              <div class="resume-item">
+                <h4>Associate Software Engineer</h4>
+              <h5>2021, August - Present</h5>
+               <p><em><a href="https://enlume.com/" target="_blank">EnLume Technologies Pvt Ltd.</a> </em></p>
+               <ul>
+               <!--   <li>Include your works here</li>-->
+               </ul>
     </div>
         </div>
 
@@ -379,7 +387,7 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>Vijayawada, Andhra Pradesh, 520008</p>
+                <p>Eluru, Andhra Pradesh, 534001</p>
               </div>
 
               <div class="email">
@@ -389,7 +397,7 @@
 		      <a href="mailto:damarakeswarg1999@gmail.com" class="btn contact-details"></a>
               </div>
               <div class="address">
-              <a href= "https://www.instagram.com/damar._.22/" target="_blank"><i class="icofont-instagram"></i></a>
+              <a href= "https://www.instagram.com/poet._.22/" target="_blank"><i class="icofont-instagram"></i></a>
                 <h4>Instagram</h4>
                 <p>amaR</p>
               </div>
