--- a/index.html
+++ b/index.html
@@ -355,6 +355,8 @@
                 <h4>Back-End Developer</h4>
               <h5>2021, February - 2021, August</h5>
                <p><em><a href="https://eruvaka.com/" target="_blank">Eruvaka Technologies Pvt Ltd.</a> </em></p>
+               <p><a href="certificates/ExperienceLetter_Eruvaka.pdf" target="_blank">Experience Letter</a></p>
+               <p><a href="certificates/ServiceLetter_Eruvaka.pdf" target="_blank">Service Letter</a></p>
               <ul>
              <!--   <li>Include your works here</li>-->
              </ul>
