made changes in summary

--- a/index.html
+++ b/index.html
@@ -335,39 +335,39 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Damarakeswar Guddanti</h4>
-              <p><em>Innovative and deadline-driven Web-Developer with experience in designing and developing</em></p>
+              <p>Innovative and deadline-driven Web-Developer with experience in designing and developing.</p>
               <ul style="list-style:none">
-                <li>Eluru, Andhra pradesh</li>
-                <li>damarakeswarg1999@gmail.com</li>
+                <li><b>Location: Eluru, Andhra pradesh</b></li>
+                <li><a href="certificates/Resume.pdf" target="_blank">Resume</a></li>
               </ul>
             </div>
 <br><br>
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor of Technology - Electrical and Electronics Engineering</h4>
+              <h4>National Institute of Technology, Tadepalligudem, Andhra Pradesh</h4>
               <h5>2016 - 2020</h5>
-              <p><em>National Institute of Technology, Tadepalligudem, Andhra Pradesh</em></p>
+              <p>Bachelor of Technology - Electrical and Electronics Engineering</p>
             </div>
              </div>
              <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <h3 class="resume-title">Professional Experience</h3>
               <div class="resume-item">
-                <h4>Back-End Developer</h4>
-              <h5>2021, February - 2021, August</h5>
-               <p><em><a href="https://eruvaka.com/" target="_blank">Eruvaka Technologies Pvt Ltd.</a> </em></p>
-               <p><a href="certificates/ExperienceLetter_Eruvaka.pdf" target="_blank">Experience Letter</a></p>
-               <p><a href="certificates/ServiceLetter_Eruvaka.pdf" target="_blank">Service Letter</a></p>
+              <h4>Eruvaka Technologies Pvt Ltd.</h4>
+              <h5>February, 2021 - August, 2021</h5>
+              <p><b>Back-End Developer</b></p>
+              <p><a href="certificates/ExperienceLetter_Eruvaka.pdf" target="_blank">Experience Letter</a></p>
+              <p><a href="certificates/ServiceLetter_Eruvaka.pdf" target="_blank">Service Letter</a></p>
               <ul>
              <!--   <li>Include your works here</li>-->
              </ul>
     </div>
               <div class="resume-item">
-                <h4>Associate Software Engineer</h4>
-              <h5>2021, August - Present</h5>
-               <p><em><a href="https://enlume.com/" target="_blank">EnLume Technologies Pvt Ltd.</a> </em></p>
-               <ul>
+              <h4>EnLume Technologies Pvt Ltd.</h4>
+              <h5>August,2021 - Present</h5>
+              <p><b>Associate Software Engineer</b></p>
+              <ul>
                <!--   <li>Include your works here</li>-->
-               </ul>
+              </ul>
     </div>
         </div>
 
