Added New Project

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
            </div>
           
           <div class="carousel-item">
-           <a href="https://github.com/amar-1999/Upload-an-image-file-to-a-folder-in-the-server"> <img class="d-block w-100" src="assets/img/imageuploader.png" alt="Third slide"></a>
+           <a href="https://github.com/amar-1999/TeslaUI-clone-app"> <img class="d-block w-100" src="assets/img/Tesla UI Clone.png" alt="Third slide"></a>
           </div>
 
            <div class="carousel-item">
