--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Amar</h1>
-      <p><span class="typed" data-typed-items="a Developer, a Poet , a Writer, an Artist"></span></p>
+      <p><span class="typed" data-typed-items="Front End Developer, Full Stack Developer, Back End Developer, Web Developer, Mobile App Developer, Poet , Writer, Artist, Author"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -78,9 +78,11 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hey! My name is <b>Damarakeswar</b> but my friends call me <b>Amar</b>. I'm a web-developer with a passion for full stack development and design. I'm currently a <b>Associate Software Engineer</b> at <a href="https://enlume.com/">EnLume Technologies</a>. I aspire towards a career that will allow me to channel my creativity through crafting beautiful software and engaging experiences.</div></p>
-	    
-
+          <p>Hey! My name is <b>Damarakeswar</b> but my friends call me <b>Amar</b>. I completed my bachelors degree in Electrical & Electronics Engineering at <b>National Institute of Technology, Andhra Pradesh</b>. 
+                With a strong foundation and experience in Front-End and Back-End, I'm passionate about web design and development, and interested in web, mobile and software development. 
+                I love to learn new things and build cool stuff. I am an avid coder, web developer, amateur writer, and binge watcher. 
+                As I grow as a developer, I am able to write clean, readable code that can be used by others and leveraged to craft beautiful software and engaging experiences. 
+		Welcome to my website. </div></p>
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
             <img src="assets/img/profile-img1.jpg" class="img-fluid" alt="">
