--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#skills"><i class="bx bx-envelope"></i>Skills</a></li>
-          <li><a href="#gallery"><i class="bx bx-envelope"></i>Projects</a></li>
-          <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Summary</span></a></li>
-         <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
+          <li><a href="#projects"><i class="bx bx-envelope"></i>Projects</a></li>
+          <li><a href="#resume"><i class="bx bx-file-blank"></i><span>Summary</span></a></li>
+         <li><a href="#contact"><i class="bx bx-envelope"></i>Contact</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -218,7 +218,7 @@
           </div>
         </section><!-- End Skills Section -->
     <!--Projects gallery section-->
-    <section class="projects container">
+    <section id = "projects" class="projects container">
       <div class="section-title text-center">
         <h1>Gallery</h1> 
       </div>
