--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
       <nav class="nav-menu">
         <ul>
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#skills"><i class="bx bx-component"></i>Skills</a></li>
-          <li><a href="#projects"><i class="bx bx-react"></i>Projects</a></li>
+          <li><a href="#about"><i class="bx bx-id-card"></i> <span>About</span></a></li>
+          <li><a href="#skills"><i class="bx bx-brain"></i>Skills</a></li>
+          <li><a href="#projects"><i class="bx bx-window-alt"></i>Projects</a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i><span>Summary</span></a></li>
          <li><a href="#contact"><i class="bx bx-envelope"></i>Contact</a></li>
 
