--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       <nav class="nav-menu">
         <ul>
-          <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="#hero"><i class="bx bx-home"></i><span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-id-card"></i> <span>About</span></a></li>
           <li><a href="#skills"><i class="bx bx-brain"></i>Skills</a></li>
           <li><a href="#projects"><i class="bx bx-window-alt"></i>Projects</a></li>
