--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
               <div class="resume-item">
               <h4>Eruvaka Technologies Pvt Ltd.</h4>
               <h5>August, 2020 - August, 2021</h5>
-              <p><b>Back-End Developer</b></p>
+              <p><b>Jr. Software Developer</b></p>
               <p><a href="certificates/ExperienceLetter_Eruvaka.pdf" target="_blank">Experience Letter</a></p>
               <!-- <p><a href="certificates/ServiceLetter_Eruvaka.pdf" target="_blank">Service Letter</a></p> -->
               <ul>
