--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
            </div>
           
           <div class="carousel-item">
-           <a href="https://github.com/amar-1999/TeslaUI-clone-app"> <img class="d-block w-100" src="assets/img/Tesla UI Clone.png" alt="Third slide"></a>
+           <a href="https://github.com/amar-1999/TeslaUI-clone-app"><img class="d-block w-100" src="assets/img/Tesla UI Clone.png" alt="Third slide"></a>
           </div>
 
            <div class="carousel-item">
@@ -306,11 +306,16 @@
               <div class="resume-item">
               <h4>EnLume Technologies Pvt Ltd.</h4>
               <h5>August,2021 - March,2022</h5>
-
-
-		
               <p><b>Associate Software Engineer</b></p>
 	      <p><a href="certificates/ExperienceLetter_Enlume.pdf" target="_blank">Experience Letter</a></p>
+              <ul>
+               <!--   <li>Include your works here</li>-->
+              </ul>
+    </div>
+	      <div class="resume-item">
+              <h4>ZettaPrime Technologies Pvt Ltd.</h4>
+              <h5>August,2022 - Present</h5>
+              <p><b>React Native Developer</b></p>
               <ul>
                <!--   <li>Include your works here</li>-->
               </ul>
