--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <img src="images/profile-1.jpg"alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Damarakeswar<br>Guddanti</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.instagram.com/poet._.23/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.instagram.com/unworthy._.soul/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://twitter.com/Amar_Guddanti" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://github.com/amar-1999" target="_blank"class="Github"><i class='bx bxl-github'></i></a>
           <a href="https://gitlab.com/amar_d" target="_blank"class="Gitlab"><i class='bx bxl-gitlab'></i></a>
@@ -80,40 +80,31 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hey! My name is <b>Damarakeswar</b> but my friends call me <b>Amar</b>. I completed my bachelors degree in Electrical & Electronics Engineering at <b>National Institute of Technology, Andhra Pradesh</b>. 
-                With a strong foundation and experience in Front-End and Back-End, I'm passionate about web design and development, and interested in web, mobile and software development. 
-                I love to learn new things and build cool stuff. I am an avid coder, web developer, amateur writer, and binge watcher. 
-                As I grow as a developer, I am able to write clean, readable code that can be used by others and leveraged to craft beautiful software and engaging experiences. 
-		Welcome to my website. </div></p>
-        <div class="row">
-          <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img1.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Web Developer</h3>
-            <p class="font-italic">
-		<div >
-              With a strong foundation in Front-End and Back-End, I'm passionate about web design and development, and interested in web and software development. 
-              As I grow as a developer, I hope to write clean, readable code that can be used by others and leveraged to create beautiful software.
-    </div>
-    </p>
-    <div class="row">
-    <div class="col-lg-4" data-aos="fade-right">
-      <img src="assets/img/image.jpg" class="img-fluid" alt="">
-    </div>
-    <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-	    <h3>Writer</h3>
-            <p class="font-italic">
-            <div >
-             Being an introvert,I try to show all my creativity through poems and writings.For more info you can visit my poetry page <a href="https://www.instagram.com/poet._.23/" target="_blank" class="instagram"></href> Click here </a>
+          <p style="text-align: justify;">Hey! Meet Amar, a web developer with a degree in Electrical & Electronics Engineering. Proficient in Front-End and Back-End, he crafts clean, impressive code, delivering captivating user experiences. Eager to learn and innovate, he constantly acquires new skills for innovative projects. Amar's website showcases his creativity and coding journey. Beyond coding, he enjoys indulging in amateur writing and binge-watching sessions. Welcome to his world of web development and creativity!</p>
+          <div class="row">
+            <div class="col-lg-4" data-aos="fade-right">
+              <img src="assets/img/profile-img1.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+              <h3>Developer</h3>
+              <p class="font-italic">
+              <p style="text-align: justify;">In the realm of web design and development, my passion lies with both Front-End and Back-End expertise. I strive to create immaculate code that not only benefits fellow developers but also delights users with exceptional digital experiences. Embracing continuous growth and innovation, I aim to push the boundaries of web and software development. Join me on my coding odyssey as we craft extraordinary software and shape a better digital world together.</p>
+              </p>
+            <div class="row">
+              <div class="col-lg-4" data-aos="fade-right">
+                <img src="assets/img/image.jpg" class="img-fluid" alt="">
               </div>
-            </p>
-    </div>
-  </div>
-		</p>
+              <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+                <h3>Writer</h3>
+                <p class="font-italic">
+                  <div >
+                    As an introvert, I express my creativity through poems and writings. Visit my poetry page for more. <a href="https://www.instagram.com/unworthy._.soul/" target="_blank" class="instagram"></href> Click here </a>
+                  </div>
+                </p>
+              </div>
+            </div>
           </div>
         </div>
-
       </div>
     </section><!-- End About Section -->
 
@@ -439,15 +430,7 @@
 
   </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Amar</span></strong>
-      </div>
-      
-    </div>
-  </footer><!-- End  Footer -->
+ 
 
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
